--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title><%= full_title(yield(:title)) %> | Ruby on Rails Tutorial Sample App</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <%= render 'layouts/shim' %>
+</head>
 
-  <body>
+<body>
+  <%= render 'layouts/header' %>
+
+  <div class="container">
     <%= yield %>
-  </body>
+    <%= render 'layouts/footer' %>  
+  </div>
+</body>
 </html>
